--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -28,7 +28,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'register-path' %}">Register</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
@@ -45,6 +45,31 @@
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
             </div>
         </header>
+
+
+
+                        
+                
+                
+                    <div class= "container">
+
+                        {% block content %}
+
+                        {% endblock content %}
+                    </div>
+               
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container">
