Login and Logout using the function based views and then using the CBVs

--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -28,11 +28,21 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
+                        
+                        
+                        {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Hello, {{request.user}}!</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'logout-path' %}">Logout</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        {% else %}
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'register-path' %}">Register</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'login-path' %}">Login</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        {% endif %}
+                            
+                       
+                       
                     </ul>
                 </div>
             </div>
@@ -51,7 +61,7 @@
                         
                 
                 
-                    <div class= "container">
+                    <div class= "container mt-3">
 
                         {% block content %}
 
