--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -3,7 +3,13 @@
 
 {% block content %}
   
+ {% for message in  messages %}
 
+  <div class="alert alert-{{message.tags}}" >
+        {{message}}
+  </div>
+   
+ {% endfor %}
   <form method="post">
     {% csrf_token %}
     {{form | crispy}}
