Django signals with registration features + Automating the profile creation using post_save function

--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -16,6 +16,13 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <style>
+
+            .profile-pic{
+                height: 135px;
+                width: 168px;
+            }
+        </style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
