--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -16,13 +16,9 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-        <style>
+        <link href="{% static 'css/custom.css' %}" rel="stylesheet" />
 
-            .profile-pic{
-                height: 135px;
-                width: 168px;
-            }
-        </style>
+  
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -42,12 +38,14 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'logout-path' %}">Logout</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'profile-path' %}">profile</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                        {% else %}
+                        {% endif %}
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'register-path' %}">Register</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'login-path' %}">Login</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                        {% endif %}
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'course-home-path' %}">Courses</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Create Course</a></li>
+                       
                             
                        
                        
