add Create update and delete method views and their templates

--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -44,7 +44,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'course-home-path' %}">Courses</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Create Course</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href=" {%  url 'course-create-path' %}">Create Course</a></li>
                        
                             
                        
