--- a/courses/templates/courses/course-detail.html
+++ b/courses/templates/courses/course-detail.html
@@ -9,7 +9,12 @@
       <h5 class="card-title">{{course.title}}</h5>
       <p class="card-text">{{course.content}}</p>
       <a href="{% url 'course-home-path' %}" class="btn btn-primary">Back</a>
-      <a href="#" class="btn btn-info">Update</a>
+      
+      {% if course.author == request.user %}
+      <a href="{% url 'course-update-path' course.id %}" class="btn btn-success">Update</a>
+      {% endif %}
+          
+     
 
     </div>
   </div>
