--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -34,19 +34,18 @@
                         
                         
                         {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Hello, {{request.user}}!</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'profile-path' %}">Hello, {{request.user}}!</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href=" {%  url 'course-create-path' %}">Create Course</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'logout-path' %}">Logout</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'profile-path' %}">profile</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                        {% endif %}
+                        {% else %}
+                        
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'register-path' %}">Register</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'login-path' %}">Login</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'course-home-path' %}">Courses</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href=" {%  url 'course-create-path' %}">Create Course</a></li>
-                       
-                            
+                        
+
+                        {% endif %}
+                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{%  url 'course-home-path' %}">Courses</a></li>
+                       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                        
                        
                     </ul>
