--- a/courses/templates/courses/course-list.html
+++ b/courses/templates/courses/course-list.html
@@ -1,5 +1,6 @@
 {% extends "users/home.html" %}
  {% load static %}
+ {% load crispy_forms_tags %}
 {% block content %}
 
 <div class="row ">
@@ -7,6 +8,13 @@
   <img src="{% static 'assets/partners1.png' %}" class="card-img-top" alt="...">
 </div>
 </div>
+
+<form methos="get">
+  
+    {{filterCourse.form  | crispy }}
+
+<input type="submit" value="Search" class="btn btn-info">
+</form>
 
 <div class="row m-3">
  {% for course in page_obj %}
